Various security and style touchups

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -23,6 +23,7 @@
     </a>
     <a
       href="https://github.com/marvinscham/bibtex-oss/issues/new"
+      rel="noopener"
       mat-raised-button
       color="primary"
       ><mat-icon>bug_report</mat-icon>Report bug</a
