--- a/frontend/src/app/stats/stats.component.css
+++ b/frontend/src/app/stats/stats.component.css
@@ -1,1 +1,3 @@
-/*# sourceMappingURL=usage.component.css.map */
+div.content iframe {
+  padding-bottom: 64px;
+}/*# sourceMappingURL=stats.component.css.map */
