--- a/frontend/src/app/stats/stats.component.html
+++ b/frontend/src/app/stats/stats.component.html
@@ -2,9 +2,8 @@
   <iframe
     plausible-embed
     src="https://plsbl.ms-ds.org/share/bibtex.ms-ds.org?auth=j6E4i9IuPM0DRK1mMEMkl&embed=true&theme=dark&background=%23303030"
-    scrolling="no"
-    frameborder="0"
     loading="lazy"
+    title="Plausible Dashboard"
     style="width: 1px; min-width: 100%; height: 1600px"
   ></iframe>
   <div style="font-size: 14px; padding-bottom: 14px">
@@ -13,6 +12,7 @@
       target="_blank"
       style="color: #4f46e5; text-decoration: underline"
       href="https://plausible.io"
+      rel="noopener"
       >Plausible Analytics</a
     >
   </div>
