--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,12 +1,16 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 
 @include mat.core();
 
-html, body { height: 100%; background-color: var(--mat-app-background-color) }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+  background-color: var(--mat-app-background-color);
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .mono {
   font-family: Inconsolata, Monaco, "Lucida Console", monospace !important;
