Added noopener to link

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -8,6 +8,7 @@
   <div class="menu-right">
     <a
       href="https://github.com/marvinscham/bibtex-oss"
+      rel="noopener"
       mat-raised-button
       target="_blank"
       color="primary"
