Cleaned up embed styling

--- a/frontend/src/app/stats/stats.component.css
+++ b/frontend/src/app/stats/stats.component.css
@@ -1,3 +1,6 @@
+div.content {
+  height: calc(100vh - 128px);
+}
 div.content iframe {
-  padding-bottom: 64px;
+  border: none;
 }/*# sourceMappingURL=stats.component.css.map */
