--- a/frontend/src/app/stats/stats.component.html
+++ b/frontend/src/app/stats/stats.component.html
@@ -3,8 +3,9 @@
     plausible-embed
     src="https://plsbl.ms-ds.org/share/bibtex.ms-ds.org?auth=j6E4i9IuPM0DRK1mMEMkl&embed=true&theme=dark&background=%23303030"
     loading="lazy"
+    height="100%"
+    width="100%"
     title="Plausible Dashboard"
-    style="width: 1px; min-width: 100%; height: 1600px"
   ></iframe>
   <div style="font-size: 14px; padding-bottom: 14px">
     Stats powered by
