--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -6,4 +6,8 @@
   <a mat-button routerLink="/stats"><mat-icon>bar_chart</mat-icon>Stats</a>
   <mat-divider vertical></mat-divider>
   <a mat-button routerLink="/terms"><mat-icon>shield</mat-icon>Terms</a>
+  <mat-divider vertical></mat-divider>
+  <a mat-button routerLink="/privacy"
+    ><mat-icon>admin_panel_settings</mat-icon>Privacy</a
+  >
 </mat-toolbar>
