--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -1,12 +1,11 @@
 <div class="content">
-  <h1>About</h1>
+  <h1>About BibTeX OSS v0.2.1</h1>
 
   <p>
     BibTeX is great to work with but can be annoying to collect and structure,
-    especially if you have different types of media to cite. BibTeX
-    One-Stop-Shop aims to make this a little easier by providing a simple
-    interface to quickly look up DOIs, ISBNs and URLs to generate clean BibTeX
-    references.
+    especially if you reference different types of media. BibTeX one-stop shop
+    aims to make this a little easier by providing a simple interface to quickly
+    look up DOIs, ISBNs and URLs to generate clean BibTeX references.
   </p>
 
   <mat-divider></mat-divider>
