Added arxiv support, cleanup

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -6,6 +6,7 @@
       <mat-option value="url">URL</mat-option>
       <mat-option value="isbn">ISBN</mat-option>
       <mat-option value="doi">DOI</mat-option>
+      <mat-option value="arxiv">arXiv ID</mat-option>
     </mat-select>
   </mat-form-field>
 
